--- a/server/package.json
+++ b/server/package.json
@@ -2,12 +2,20 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "start": "nodemon index.js"
+  },
   "license": "MIT",
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongodb": "^4.1.3",
-    "nodemon": "^2.0.14"
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.14",
+    "uuid": "^8.3.2"
   }
 }
