--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^4.1.3",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.14",
+    "path": "^0.12.7",
     "uuid": "^8.3.2"
   }
 }
