--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "license": "MIT",
   "dependencies": {
@@ -17,6 +17,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.14",
     "path": "^0.12.7",
+    "url": "^0.11.0",
     "uuid": "^8.3.2"
   }
 }
