--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8000",
+  "proxy": "http://localhost:8000 || https://vanhaul.herokuapp.com/",
   "homepage": ".",
   "dependencies": {
     "@auth0/auth0-react": "^1.8.0",
