--- a/server/package.json
+++ b/server/package.json
@@ -19,5 +19,9 @@
     "path": "^0.12.7",
     "url": "^0.11.0",
     "uuid": "^8.3.2"
-  }
+  },
+  "engines": {
+    "node": "16.x",
+    "yarn": "1.22.11"
+}
 }
