--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
+  "engines": {
+    "node": "14.x",
+    "yarn": "1.22.5"
+},
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
+
   },
   "license": "MIT",
   "dependencies": {
