--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "yarn": "1.22.5"
 },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "install": "cd client && yarn install"
 
   },
   "license": "MIT",
@@ -24,9 +25,5 @@
     "path": "^0.12.7",
     "url": "^0.11.0",
     "uuid": "^8.3.2"
-  },
-  "engines": {
-    "node": "16.x",
-    "yarn": "1.22.11"
-}
+  }
 }
